manifests/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        #image: lscr.io/linuxserver/sonarr:4.0.9
        image: busybox
        command: ["sleep","1d"]
        ports:
        - containerPort: 8989
          name: web
        volumeMounts:
        - name: sonarr
          mountPath: /config
        - name: data
          mountPath: /mnt/data/hold
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: sonarr
        persistentVolumeClaim:
          claimName: sonarr
      - name: data
        persistentVolumeClaim:
          claimName: anime
